[maven-release-plugin] prepare release emit-reading-api-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
         <groupId>in.virit.sb</groupId>
         <artifactId>viritin-addon-project-parent</artifactId>
         <version>0.0.3</version>
-        <relativePath/>
+        <relativePath />
     </parent>
     <groupId>in.virit</groupId>
     <artifactId>emit-reading-api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
     <inceptionYear>2024</inceptionYear>
 
@@ -29,7 +29,8 @@
         <url>https://github.com/viritin/emit-reading-api</url>
         <connection>scm:git:git://github.com/viritin/emit-reading-api.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:/viritin/emit-reading-api.git</developerConnection>
-    </scm>
+      <tag>emit-reading-api-0.0.1</tag>
+  </scm>
 
     <issueManagement>
         <system>GitHub</system>
