--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>in.virit</groupId>
     <artifactId>emit-reading-api</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <inceptionYear>2024</inceptionYear>
 
@@ -29,7 +29,7 @@
         <url>https://github.com/viritin/emit-reading-api</url>
         <connection>scm:git:git://github.com/viritin/emit-reading-api.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:/viritin/emit-reading-api.git</developerConnection>
-      <tag>emit-reading-api-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <issueManagement>
