--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <groupId>in.virit</groupId>
     <artifactId>emit-reading-api</artifactId>
+    <name>Emit Reading API for Vaadin</name>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <inceptionYear>2024</inceptionYear>
