--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
         <groupId>in.virit.sb</groupId>
         <artifactId>viritin-addon-project-parent</artifactId>
         <version>0.0.3</version>
-        <relativePath/>
+        <relativePath />
     </parent>
     <groupId>in.virit</groupId>
     <artifactId>emit-reading-api</artifactId>
     <name>Emit Reading API for Vaadin</name>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
     <inceptionYear>2024</inceptionYear>
 
@@ -30,7 +30,8 @@
         <url>https://github.com/viritin/emit-reading-api</url>
         <connection>scm:git:git://github.com/viritin/emit-reading-api.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:/viritin/emit-reading-api.git</developerConnection>
-    </scm>
+      <tag>emit-reading-api-0.0.1</tag>
+  </scm>
 
     <issueManagement>
         <system>GitHub</system>
